SusiMail: make sure the delete mail modal is visible

--- a/installer/resources/themes/susimail/shared.css
+++ b/installer/resources/themes/susimail/shared.css
@@ -1,3 +1,6 @@
+/* I2P+ Susmail shared styles by dr|z3d */
+body.modal{position:relative}
+body.modal::before{display:block;position:absolute;top:0;left:0;bottom:0;right:0;z-index:999;background:#000d;content:"";pointer-events:none}
 .debugHeader td{padding:0!important}
 .debugHeader table{border-collapse:collapse}
 .debugHeader table td{padding:2px 6px!important;font-size:90%;box-shadow:none}
